2007-10-29  Jeremy Cribb <jcribb@email.unc.edu>
	- sim_msd.m: made code friendlier.
	- ve.m: made code friendlier.

2007-08-30  Jeremy Cribb <jcribb@email.unc.edu>
	- msd.m: fixed typo.
	- plot_msd.m: added figure handling.
	- video_msd.m: fixed typo.

2007-06-12  Briana Carstens <blcarste@physics.unc.edu>
	- msd.m: removed plotting code.  removed loading video code.  generalized to include simulated data.
	- video_msd.m: added.  loads video data and uses new msd to compute msd curve.
	- plot_msd.m: added.  plots common mean-squared-displacment curves.  These plots used to be automatically generated by msd.  
	- sim_msd.m: added.  simulates MSD curves for datasets containing variable numbers of trackers for a given duration and sampling rate.  Used to help validate msd and ve computations.

2007-01-25  Jeremy Cribb <jcribb@email.unc.edu>
	- plot_ve.m: added.  plots viscoelastic moduli given data from ve.m
	- ve.m: removed plotting code and made new function.
	- msd.m: filtered the sample count for NaNs so that ve works again.

2006-08-01  Kalpit Desai <kvdesai@email.unc.edu>
	* msdbase.m: 
	- Turned off interpolation when timestamps are uneven. Instead just warns on console and computes the error in Tau.
	- Reports error in Tau.
	* laser_msd_crossover.m:
	- Added. A utility that computes average msd for an ensemble of tracking files. 
	- Computes msd for bead position, position error and stage position and plots them to show crossover.
	- Handy to determine feedback bandwidth.
	* laser_msd.m:
	- Changed to call newly added logerrorbar instead of manually setting up the errorbars.
	- Some comments about the bad interface to external code that needs to be improved at some point.

2006-07-11  Jeremy Cribb <jcribb@email.unc.edu>
	- msd.m: suppressed warning for dividing by zero when requested window is too large.  Also removed NaN's that were reported when the window size was too large.

2006-07-10  Kalpit Desai <kvdesai@email.unc.edu>